<resources>
    <string name="app_name">Taller3</string>
    <string name="main">Taller FireBase</string>
    <string name="contraseña">"Contraseña</string>
    <string name="user">"Usuario</string>
    <string name="login">"Login"</string>
    <string name="registrate">"Si no estas registrado, ¡Regístrate!</string>
    <string name="registrarme">Registrarme</string>
    <string name="email">"Email"</string>
    <string name="nombre">"Nombre"</string>
    <string name="apellido">"Apellido"</string>
    <string name="img_contacto">"Imagen de contacto"</string>
    <string name="identificacion">"# de identificación"</string>
    <string name="ubicacion">"Ubicación</string>
    <string name="seleccionar">"Seleccionar"</string>
    <string name="logout">LogOut</string>
    <string name="estado">Cambiar estado</string>
    <string name="list">Listado de usuarios</string>
    <string name="title_activity_mapa">Map</string>
</resources>